fixed form in dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -727,3 +727,8 @@ label{
 #dark pre, #dark code{
   background-color: #222222;
 }
+
+#dark input, #dark textarea{
+  color:#fff;
+  background: #333;
+}
